# deep-dive-make

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml  pages.yaml
course-book/: index.md  module-00.md  module-01.md  module-02.md  module-03.md  module-04.md  module-05.md  readme-capstone.md
make-capstone/: Makefile  README.md
make-capstone/include/: sub.h  util.h
make-capstone/mk/: common.mk  contract.mk  macros.mk  objects.mk  rules_eval.mk  stamps.mk
make-capstone/repro/: 01-shared-append.mk  01-shared-log.mk  02-temp-collision.mk  03-stamp-clobber.mk  04-generated-header.mk  05-mkdir-race.mk  06-order-only-misuse.mk  07-pattern-ambiguity.mk
make-capstone/scripts/: gen_dynamic_h.py  gen_multi.py  mkdist.py
make-capstone/src/: main.c  util.c
make-capstone/src/dynamic/: dyn1.c  dyn2.c
make-capstone/src/sub/: sub.c
make-capstone/tests/: run.sh
