[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[project]
name = "deep-dive-make"
version = "0.1.0"
description = "Deep Dive Make is a five-module course-book that teaches GNU Make as a disciplined build-graph engine, plus an executable capstone."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bijan Mousavi" }]
dependencies = []

[project.urls]
Homepage = "https://bijux.github.io/deep-dive-make/"
Repository = "https://github.com/bijux/deep-dive-make"

[project.optional-dependencies]
# Documentation site (MkDocs Material)
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocs-macros-plugin>=1,<2",
]

# Python tooling for the small helper scripts under make-capstone/scripts/
dev = [
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
]

# This repo is not a Python library; we still ship a minimal wheel so
# `pip install .[docs,dev]` works without relying on requirements*.txt files.
[tool.hatch.build.targets.wheel]
only-include = [
  "README.md",
  "LICENSE",
  "mkdocs.yml",
  "course-book",
  "docs",
  "make-capstone",
]

[tool.hatch.build.targets.sdist]
only-include = [
  "README.md",
  "LICENSE",
  "mkdocs.yml",
  "course-book",
  "docs",
  "make-capstone",
  "pyproject.toml",
  "Makefile",
  ".gitignore",
  ".github",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
